--- a/app/src/main/res/layout/activity_project.xml
+++ b/app/src/main/res/layout/activity_project.xml
@@ -5,7 +5,7 @@
 	 xmlns:tools="http://schemas.android.com/tools"
 	 android:layout_height="match_parent"
 	 android:layout_width="match_parent"
-	android:orientation="vertical"
+	 android:orientation="vertical"
 	 tools:context=".ProjectActivity">
 
 	<com.google.android.material.appbar.AppBarLayout
@@ -20,37 +20,73 @@
 			 android:layout_width="match_parent"
 			 android:background="@color/colorPrimary"
 			 app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light"
-			 android:id="@+id/toolbar" />
+			 android:id="@+id/project_toolbar" />
 
 	</com.google.android.material.appbar.AppBarLayout>
-	
+
 	<com.google.android.material.tabs.TabLayout
-		android:layout_height="24dp"
+		 android:layout_height="24dp"
 		 android:layout_width="match_parent"
-		 android:id="@+id/project_editors_tab"/>
+		 app:tabGravity="start"
+		 style="@style/App.TabLayoutTheme"
+		 android:id="@+id/project_editors_tab" />
 
 	<androidx.viewpager2.widget.ViewPager2
 		 android:layout_height="match_parent"
 		 android:layout_width="match_parent"
 		 android:id="@+id/project_editor_view" />
-	
+
+	<androidx.constraintlayout.widget.ConstraintLayout
+		 android:layout_height="match_parent"
+		 android:layout_width="match_parent"
+		 android:id="@+id/project_no_editor_layout">
+
+		<TextView
+			 android:layout_height="wrap_content"
+			 android:layout_width="wrap_content"
+			 android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
+			 app:layout_constraintTop_toTopOf="parent"
+			 app:layout_constraintStart_toStartOf="parent"
+			 android:textColor="?attr/colorOnSurface"
+			 app:layout_constraintEnd_toEndOf="parent"
+			 app:layout_constraintBottom_toBottomOf="parent"
+			 app:layout_constraintVertical_bias="0.4"
+			 android:id="@+id/project_no_editor_title"
+			 android:text="@string/app_name" />
+
+		<TextView
+			 android:layout_height="wrap_content"
+			 android:layout_width="wrap_content"
+			 android:gravity="center"
+			 android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
+			 app:layout_constraintStart_toStartOf="@id/no_editor_title"
+			 android:textSize="13sp"
+			 android:textColor="?attr/colorSecondaryVariant"
+			 app:layout_constraintEnd_toEndOf="@id/no_editor_title"
+			 android:layout_marginTop="8dp"
+			 tools:text="Open some files on the file drawer (swipe left to right)"
+			 app:layout_constraintTop_toBottomOf="@+id/no_editor_title"
+			 android:id="@+id/project_no_editor_summary" />
+
+	</androidx.constraintlayout.widget.ConstraintLayout>
+
 	<LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="56dp"
-        android:layout_marginTop="-56dp"
-        android:orientation="vertical">
+		 android:layout_height="56dp"
+		 android:layout_width="match_parent"
+		 android:orientation="vertical"
+		 android:layout_marginTop="-56dp">
 
-        <HorizontalScrollView
-            android:layout_width="match_parent"
-            android:layout_height="40dp">
+		<HorizontalScrollView
+			 android:layout_height="40dp"
+			 android:layout_width="match_parent">
 
-            <io.github.rosemoe.sora.widget.SymbolInputView
-                android:id="@+id/symbol_input"
-                android:layout_width="wrap_content"
-                android:layout_height="40dp" />
+			<io.github.rosemoe.sora.widget.SymbolInputView
+				 android:layout_height="40dp"
+				 android:layout_width="wrap_content"
+				 android:id="@+id/project_symbol_input" />
 
-        </HorizontalScrollView>
-	
+		</HorizontalScrollView>
+
 	</LinearLayout>
 
 </LinearLayout>
