--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,6 +14,19 @@
 		<item name="colorOnBackground">@color/white</item>
     </style>
 	
+	<style name="App.TabLayoutTheme" parent="Widget.Material3.TabLayout">
+		<item name="tabIndicatorAnimationMode">elastic</item>
+		<item name="tabIndicatorFullWidth">false</item>
+		<item name="tabIndicatorGravity">bottom</item>
+		<item name="tabIndicatorHeight">3dp</item>
+		<item name="tabMode">scrollable</item>
+	</style>
+	
+	<style name="App.TabLayoutTheme.Title" parent="TextAppearance.Design.Tab">
+		<item name="textAllCaps">false</item>
+		<item name="android:textAllCaps">false</item>
+	</style>
+	
 	<style name="View.ImagePreviewCorner" parent="">
 		<item name="cornerSizeTopRight">30dp</item>
 		<item name="cornerSizeTopLeft">30dp</item>
