--- a/app/src/main/res/layout/activity_project.xml
+++ b/app/src/main/res/layout/activity_project.xml
@@ -1,19 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.drawerlayout.widget.DrawerLayout
 	 xmlns:android="http://schemas.android.com/apk/res/android"
 	 xmlns:app="http://schemas.android.com/apk/res-auto"
 	 xmlns:tools="http://schemas.android.com/tools"
 	 android:layout_height="match_parent"
 	 android:layout_width="match_parent"
-	 android:orientation="vertical"
+	 android:id="@+id/project_drawer_layout"
 	 tools:context=".ProjectActivity">
 
 	<com.google.android.material.appbar.AppBarLayout
 		 android:layout_height="wrap_content"
 		 android:layout_width="match_parent"
 		 app:layout_behavior="com.google.android.material.appbar.AppBarLayout$Behavior"
-		 android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
-		 android:id="@+id/appbar">
+		 android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar">
 
 		<com.google.android.material.appbar.MaterialToolbar
 			 android:layout_height="?attr/actionBarSize"
@@ -22,23 +21,47 @@
 			 app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light"
 			 android:id="@+id/project_toolbar" />
 
-	</com.google.android.material.appbar.AppBarLayout>
+		<com.google.android.material.tabs.TabLayout
+			 android:layout_height="48dp"
+			 android:layout_width="match_parent"
+			 android:visibility="gone"
+			 app:tabGravity="start"
+			 style="@style/App.TabLayoutTheme"
+			 android:id="@+id/project_editors_tab" />
 
-	<com.google.android.material.tabs.TabLayout
-		 android:layout_height="24dp"
-		 android:layout_width="match_parent"
-		 app:tabGravity="start"
-		 style="@style/App.TabLayoutTheme"
-		 android:id="@+id/project_editors_tab" />
+	</com.google.android.material.appbar.AppBarLayout>
 
 	<androidx.viewpager2.widget.ViewPager2
 		 android:layout_height="match_parent"
 		 android:layout_width="match_parent"
+		 android:layout_marginBottom="56dp"
+		 android:visibility="gone"
 		 android:id="@+id/project_editor_view" />
 
+	<LinearLayout
+		 android:layout_height="56dp"
+		 android:layout_width="match_parent"
+		 android:orientation="vertical"
+		 android:layout_marginTop="-56dp"
+		 android:id="@+id/project_symbol_input_container">
+
+		<HorizontalScrollView
+			 android:layout_height="40dp"
+			 android:layout_width="match_parent">
+
+			<io.github.rosemoe.sora.widget.SymbolInputView
+				 android:layout_height="40dp"
+				 android:layout_width="match_parent"
+				 android:id="@+id/project_symbol_input" />
+
+		</HorizontalScrollView>
+
+	</LinearLayout>
+	
 	<androidx.constraintlayout.widget.ConstraintLayout
 		 android:layout_height="match_parent"
 		 android:layout_width="match_parent"
+		 android:layout_marginBottom="56dp"
 		 android:id="@+id/project_no_editor_layout">
 
 		<TextView
@@ -59,34 +82,30 @@
 			 android:layout_width="wrap_content"
 			 android:gravity="center"
 			 android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
-			 app:layout_constraintStart_toStartOf="@id/no_editor_title"
+			 app:layout_constraintStart_toStartOf="@id/project_no_editor_title"
 			 android:textSize="13sp"
 			 android:textColor="?attr/colorSecondaryVariant"
-			 app:layout_constraintEnd_toEndOf="@id/no_editor_title"
+			 app:layout_constraintEnd_toEndOf="@id/project_no_editor_title"
 			 android:layout_marginTop="8dp"
 			 tools:text="Open some files on the file drawer (swipe left to right)"
-			 app:layout_constraintTop_toBottomOf="@+id/no_editor_title"
+			 app:layout_constraintTop_toBottomOf="@id/project_no_editor_title"
 			 android:id="@+id/project_no_editor_summary" />
 
 	</androidx.constraintlayout.widget.ConstraintLayout>
 
-	<LinearLayout
-		 android:layout_height="56dp"
-		 android:layout_width="match_parent"
-		 android:orientation="vertical"
-		 android:layout_marginTop="-56dp">
+	<com.google.android.material.navigation.NavigationView
+		 android:layout_height="match_parent"
+		 android:layout_width="wrap_content"
+		 android:layout_gravity="end"
+		 android:id="@+id/project_file_drawer">
 
-		<HorizontalScrollView
-			 android:layout_height="40dp"
-			 android:layout_width="match_parent">
+		<FrameLayout
+			 android:layout_height="match_parent"
+			 android:layout_width="match_parent"
+			 android:id="@+id/project_file_drawer_fragment">
 
-			<io.github.rosemoe.sora.widget.SymbolInputView
-				 android:layout_height="40dp"
-				 android:layout_width="wrap_content"
-				 android:id="@+id/project_symbol_input" />
+		</FrameLayout>
 
-		</HorizontalScrollView>
+	</com.google.android.material.navigation.NavigationView>
 
-	</LinearLayout>
-
-</LinearLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
