--- a/app/src/main/res/layout/project_treeview_fragment.xml
+++ b/app/src/main/res/layout/project_treeview_fragment.xml
@@ -3,18 +3,18 @@
 	 xmlns:android="http://schemas.android.com/apk/res/android"
 	 xmlns:app="http://schemas.android.com/apk/res-auto"
 	 android:layout_height="match_parent"
-	 android:layout_width="match_parent"
-	 android:padding="12dp"
+	 android:layout_width="wrap_content"
+	 android:padding="4dp"
 	 android:orientation="vertical">
 
 	<HorizontalScrollView
 		 android:layout_height="match_parent"
-		 android:layout_width="match_parent"
+		 android:layout_width="wrap_content"
 		 android:fillViewport="true">
 
 		<androidx.recyclerview.widget.RecyclerView
 			 android:layout_height="match_parent"
-			 android:layout_width="match_parent"
+			 android:layout_width="wrap_content"
 			 android:scrollbars="vertical"
 			 android:id="@+id/project_treeview" />
 
