--- a/app/src/main/res/layout/activity_project.xml
+++ b/app/src/main/res/layout/activity_project.xml
@@ -1,111 +1,116 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.drawerlayout.widget.DrawerLayout
-	 xmlns:android="http://schemas.android.com/apk/res/android"
-	 xmlns:app="http://schemas.android.com/apk/res-auto"
-	 xmlns:tools="http://schemas.android.com/tools"
-	 android:layout_height="match_parent"
-	 android:layout_width="match_parent"
-	 android:id="@+id/project_drawer_layout"
-	 tools:context=".ProjectActivity">
+     xmlns:android="http://schemas.android.com/apk/res/android"
+     xmlns:app="http://schemas.android.com/apk/res-auto"
+     xmlns:tools="http://schemas.android.com/tools"
+     android:layout_height="match_parent"
+     android:layout_width="match_parent"
+     android:id="@+id/project_drawer_layout"
+     tools:context=".ProjectActivity">
 
-	<com.google.android.material.appbar.AppBarLayout
-		 android:layout_height="wrap_content"
-		 android:layout_width="match_parent"
-		 app:layout_behavior="com.google.android.material.appbar.AppBarLayout$Behavior"
-		 android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar">
+    <RelativeLayout
+         android:layout_height="match_parent"
+         android:layout_width="match_parent">
 
-		<com.google.android.material.appbar.MaterialToolbar
-			 android:layout_height="?attr/actionBarSize"
-			 android:layout_width="match_parent"
-			 android:background="@color/colorPrimary"
-			 app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light"
-			 android:id="@+id/project_toolbar" />
+        <com.google.android.material.appbar.MaterialToolbar
+             android:layout_height="?attr/actionBarSize"
+             android:layout_width="match_parent"
+             android:background="@color/colorPrimary"
+             android:elevation="2dp"
+             app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light"
+             android:outlineProvider="none"
+             android:id="@+id/project_toolbar" />
 
-		<com.google.android.material.tabs.TabLayout
-			 android:layout_height="48dp"
-			 android:layout_width="match_parent"
-			 android:visibility="gone"
-			 app:tabGravity="start"
-			 style="@style/App.TabLayoutTheme"
-			 android:id="@+id/project_editors_tab" />
+        <RelativeLayout
+             android:layout_height="match_parent"
+             android:layout_width="match_parent"
+             android:layout_below="@id/project_toolbar"
+             android:elevation="1dp"
+             android:outlineProvider="none"
+             android:id="@+id/project_no_editor_container">
 
-	</com.google.android.material.appbar.AppBarLayout>
+            <TextView
+                 android:layout_height="wrap_content"
+                 android:layout_width="wrap_content"
+                 android:layout_centerInParent="true"
+                 android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
+                 android:id="@+id/project_no_editor_title"
+                 android:text="@string/app_name" />
 
-	<androidx.viewpager2.widget.ViewPager2
-		 android:layout_height="match_parent"
-		 android:layout_width="match_parent"
-		 android:layout_marginBottom="56dp"
-		 android:visibility="gone"
-		 android:id="@+id/project_editor_view" />
+            <TextView
+                 android:layout_height="wrap_content"
+                 android:layout_width="wrap_content"
+                 android:layout_centerInParent="true"
+                 android:layout_below="@id/project_no_editor_title"
+                 android:gravity="center"
+                 android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
+                 android:textSize="13sp"
+                 android:layout_marginTop="4dp"
+                 android:text="Open some files on the file drawer (swipe left to right)" />
 
-	<LinearLayout
-		 android:layout_height="56dp"
-		 android:layout_width="match_parent"
-		 android:orientation="vertical"
-		 android:layout_marginTop="-56dp"
-		 android:id="@+id/project_symbol_input_container">
+        </RelativeLayout>
 
-		<HorizontalScrollView
-			 android:layout_height="40dp"
-			 android:layout_width="match_parent">
+        <com.google.android.material.tabs.TabLayout
+             android:layout_height="32dp"
+             android:layout_width="match_parent"
+             android:elevation="1dp"
+             app:tabIndicatorColor="@color/colorSecondary"
+             app:tabTextColor="@color/white"
+             android:layout_below="@id/project_toolbar"
+             android:background="?attr/colorPrimary"
+             android:minHeight="28dp"
+             app:tabGravity="start"
+             style="@style/App.TabLayoutTheme"
+             app:tabTextAppearance="@style/App.TabLayoutTheme.Title"
+             android:outlineProvider="none"
+             android:id="@+id/project_editors_tab" />
 
-			<io.github.rosemoe.sora.widget.SymbolInputView
-				 android:layout_height="40dp"
-				 android:layout_width="match_parent"
-				 android:id="@+id/project_symbol_input" />
+        <androidx.viewpager2.widget.ViewPager2
+             android:layout_height="match_parent"
+             android:layout_width="match_parent"
+             android:layout_below="@id/project_editors_tab"
+             android:elevation="1dp"
+			android:layout_above="@id/project_symbol_input_container"
+             android:outlineProvider="none"
+             android:id="@+id/project_editor_view" />
 
-		</HorizontalScrollView>
+        <LinearLayout
+             android:layout_height="56dp"
+             android:layout_width="match_parent"
+             android:elevation="0dp"
+             android:orientation="vertical"
+             android:outlineProvider="none"
+             android:layout_alignParentBottom="true"
+             android:id="@+id/project_symbol_input_container">
 
-	</LinearLayout>
-	
-	<androidx.constraintlayout.widget.ConstraintLayout
-		 android:layout_height="match_parent"
-		 android:layout_width="match_parent"
-		 android:layout_marginBottom="56dp"
-		 android:id="@+id/project_no_editor_layout">
+            <HorizontalScrollView
+                 android:layout_height="match_parent"
+                 android:layout_width="match_parent">
 
-		<TextView
-			 android:layout_height="wrap_content"
-			 android:layout_width="wrap_content"
-			 android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
-			 app:layout_constraintTop_toTopOf="parent"
-			 app:layout_constraintStart_toStartOf="parent"
-			 android:textColor="?attr/colorOnSurface"
-			 app:layout_constraintEnd_toEndOf="parent"
-			 app:layout_constraintBottom_toBottomOf="parent"
-			 app:layout_constraintVertical_bias="0.4"
-			 android:id="@+id/project_no_editor_title"
-			 android:text="@string/app_name" />
+                <io.github.rosemoe.sora.widget.SymbolInputView
+                     android:layout_height="match_parent"
+                     android:layout_width="match_parent"
+                     android:id="@+id/project_symbol_input" />
 
-		<TextView
-			 android:layout_height="wrap_content"
-			 android:layout_width="wrap_content"
-			 android:gravity="center"
-			 android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
-			 app:layout_constraintStart_toStartOf="@id/project_no_editor_title"
-			 android:textSize="13sp"
-			 android:textColor="?attr/colorSecondaryVariant"
-			 app:layout_constraintEnd_toEndOf="@id/project_no_editor_title"
-			 android:layout_marginTop="8dp"
-			 tools:text="Open some files on the file drawer (swipe left to right)"
-			 app:layout_constraintTop_toBottomOf="@id/project_no_editor_title"
-			 android:id="@+id/project_no_editor_summary" />
+            </HorizontalScrollView>
 
-	</androidx.constraintlayout.widget.ConstraintLayout>
+        </LinearLayout>
 
-	<com.google.android.material.navigation.NavigationView
-		 android:layout_height="match_parent"
-		 android:layout_width="wrap_content"
-		 android:layout_gravity="end"
-		 android:id="@+id/project_file_drawer">
+    </RelativeLayout>
 
-		<FrameLayout
-			 android:layout_height="match_parent"
-			 android:layout_width="match_parent"
-			 android:id="@+id/project_file_drawer_fragment">
+    <com.google.android.material.navigation.NavigationView
+         android:layout_height="match_parent"
+         android:layout_width="wrap_content"
+         android:layout_gravity="end"
+         android:id="@+id/project_file_drawer">
 
-		</FrameLayout>
+        <FrameLayout
+             android:layout_height="match_parent"
+             android:layout_width="match_parent"
+             android:id="@+id/project_file_drawer_fragment">
 
-	</com.google.android.material.navigation.NavigationView>
+        </FrameLayout>
+
+    </com.google.android.material.navigation.NavigationView>
 
 </androidx.drawerlayout.widget.DrawerLayout>
