fix some possible npe, fix treeview look

--- a/app/src/main/res/layout/activity_project.xml
+++ b/app/src/main/res/layout/activity_project.xml
@@ -51,7 +51,7 @@
         </RelativeLayout>
 
         <com.google.android.material.tabs.TabLayout
-             android:layout_height="32dp"
+             android:layout_height="wrap_content"
              android:layout_width="match_parent"
              android:elevation="1dp"
              app:tabIndicatorColor="@color/colorSecondary"
