--- a/app/src/main/res/layout/project_folder_tree_view.xml
+++ b/app/src/main/res/layout/project_folder_tree_view.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView
+<com.google.android.material.textview.MaterialTextView
 	 xmlns:android="http://schemas.android.com/apk/res/android"
-	 android:layout_height="42dp"
+	 xmlns:app="http://schemas.android.com/apk/res-auto"
+	 android:layout_height="wrap_content"
 	 android:layout_width="wrap_content"
 	 android:drawablePadding="6dp"
-	 android:gravity="center_vertical"
-	 android:padding="4dp"
-	 android:textSize="18sp"
-	 android:drawableRight="@mipmap/ic_launcher_round"
-	 android:id="@+id/project_treeview_folder_name"
-	 android:textStyle="bold" />
+	 android:padding="12dp"
+	 android:drawableStart="@android:drawable/radiobutton_off_background"
+	 android:id="@+id/project_treeview_folder_name" />
