--- a/app/src/main/res/layout/project_file_tree_view.xml
+++ b/app/src/main/res/layout/project_file_tree_view.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.textview.MaterialTextView
-	 xmlns:android="http://schemas.android.com/apk/res/android"
-	 xmlns:app="http://schemas.android.com/apk/res-auto"
-	 android:layout_height="wrap_content"
-	 android:layout_width="wrap_content"
-	 android:drawablePadding="6dp"
-	 android:padding="12dp"
-	 android:drawableStart="@android:drawable/radiobutton_on_background"
-	 android:id="@+id/project_treeview_file_name" />
+<TextView
+     xmlns:android="http://schemas.android.com/apk/res/android"
+     xmlns:app="http://schemas.android.com/apk/res-auto"
+     android:layout_height="wrap_content"
+     android:layout_width="wrap_content"
+     android:drawablePadding="6dp"
+     android:padding="12dp"
+     android:id="@+id/project_treeview_file_name" />
