--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#BB86FC</color>
-    <color name="colorPrimaryDefault">#3700B3</color>
-    <color name="colorSecondary">#03DAC5</color>
-    <color name="colorSecondaryDefault">#018786</color>
+    <color name="colorPrimary">#ff123d</color>
+    <color name="colorPrimaryDefault">#ff859b</color>
+    <color name="colorSecondary">#ffb31c</color>
+    <color name="colorSecondaryDefault">#ffc34d</color>
 	
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
