--- a/app/src/main/res/layout/activity_project.xml
+++ b/app/src/main/res/layout/activity_project.xml
@@ -46,7 +46,7 @@
                  android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                  android:textSize="13sp"
                  android:layout_marginTop="4dp"
-                 android:text="Open some files on the file drawer (swipe left to right)" />
+                 android:text="Open some files on the file drawer (swipe right to left)" />
 
         </RelativeLayout>
 
