fix sum bugs and weird view pager desync
it should be fixed, but if its not... file an issue

--- a/app/src/main/res/menu/project_action_menu.xml
+++ b/app/src/main/res/menu/project_action_menu.xml
@@ -3,13 +3,18 @@
 	xmlns:app="http://schemas.android.com/apk/res-auto">
 	
 	<item
-		android:id="@+id/project_save_file"
-		android:title="Save"
-		app:showAsAction="never" />
-
+		android:id="@+id/project_file_drawer"
+		android:title="File Drawer"
+		app:showAsAction="always" />
+	
 	<item
 		android:id="@+id/project_save_all_file"
 		android:title="Save All"
+		app:showAsAction="always" />
+	
+	<item
+		android:id="@+id/project_save_file"
+		android:title="Save"
 		app:showAsAction="never" />
 		
 	<item
