--- a/app/src/main/res/drawable/ic_menu.xml
+++ b/app/src/main/res/drawable/ic_menu.xml
@@ -5,7 +5,7 @@
     android:viewportHeight="24"
     android:viewportWidth="24">
     <path
-        android:fillColor="#ff000000"
+        android:fillColor="?attr/colorControlNormal"
         android:pathData="M3,6H21V8H3V6M3,11H21V13H3V11M3,16H21V18H3V16Z"/>
 
 </vector>
