--- a/app/src/main/res/menu/project_action_menu_noeditor.xml
+++ b/app/src/main/res/menu/project_action_menu_noeditor.xml
@@ -5,15 +5,18 @@
 	<item
 		android:id="@+id/project_save_file"
 		android:title="Save"
+		android:icon="@drawable/ic_save"
 		app:showAsAction="never" />
 
 	<item
 		android:id="@+id/project_save_all_file"
 		android:title="Save All"
-		app:showAsAction="always" />
+		android:icon="@drawable/ic_save"
+		app:showAsAction="never" />
 		
 	<item
 		android:id="@+id/project_import_obj"
 		android:title="Import 3D Object"
+		android:icon="@drawable/ic_import"
 		app:showAsAction="never" />
 </menu>
