fix sum bugs, semi-implement something on the file drawer

--- a/app/src/main/res/layout/activity_project.xml
+++ b/app/src/main/res/layout/activity_project.xml
@@ -88,7 +88,7 @@
 
                 <io.github.rosemoe.sora.widget.SymbolInputView
                      android:layout_height="match_parent"
-                     android:layout_width="match_parent"
+                     android:layout_width="wrap_content"
                      android:id="@+id/project_symbol_input" />
 
             </HorizontalScrollView>
