--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,68 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-	 xmlns:android="http://schemas.android.com/apk/res/android"
-	 xmlns:app="http://schemas.android.com/apk/res-auto"
-	 xmlns:tools="http://schemas.android.com/tools"
-	 android:layout_height="match_parent"
-	 android:layout_width="match_parent"
-	 tools:context=".MainActivity">
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    android:orientation="vertical"
+    tools:context=".MainActivity">
 
-	<com.google.android.material.appbar.AppBarLayout
-		 android:layout_height="wrap_content"
-		 android:layout_width="match_parent"
-		 app:layout_behavior="com.google.android.material.appbar.AppBarLayout$Behavior"
-		 android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar">
+    <RelativeLayout
+        android:layout_height="match_parent"
+        android:layout_width="match_parent">
 
-		<com.google.android.material.appbar.MaterialToolbar
-			 android:layout_height="?attr/actionBarSize"
-			 android:layout_width="match_parent"
-			 android:background="@color/colorPrimary"
-			 app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light" />
+        <com.google.android.material.appbar.MaterialToolbar
+            android:layout_height="?attr/actionBarSize"
+            android:layout_width="match_parent"
+            android:background="@color/colorPrimary"
+            android:elevation="2dp"
+            android:outlineProvider="none"
+            android:layout_alignParentTop="true"
+            android:id="@+id/main_toolbar" />
 
-	</com.google.android.material.appbar.AppBarLayout>
+        <FrameLayout
+            android:layout_height="match_parent"
+            android:layout_width="match_parent"
+            android:layout_below="@id/main_toolbar"
+            android:layout_above="@id/main_bottom_nav"
+            android:id="@+id/main_fragment_container" />
 
-	<TextView
-		 android:layout_height="wrap_content"
-		 android:layout_width="wrap_content"
-		 android:layout_marginBottom="8dp"
-		 app:layout_constraintTop_toTopOf="parent"
-		 app:layout_constraintStart_toStartOf="parent"
-		 app:layout_constraintEnd_toEndOf="parent"
-		 app:layout_constraintBottom_toTopOf="@id/launch_pa"
-		 android:id="@+id/welcome_text"
-		 android:text="Welcome to ESManager!" />
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            app:itemTextColor="@drawable/bottom_nav_text_color"
+            app:menu="@menu/main_bottom_menu"
+            app:itemIconTint="@drawable/bottom_nav_icon_tint"
+            android:layout_alignParentBottom="true"
+            android:id="@+id/main_bottom_nav" />
 
-	<com.google.android.material.button.MaterialButton
-		android:id="@+id/launch_pa"
-		 android:layout_height="wrap_content"
-		 android:layout_width="wrap_content"
-		 android:layout_marginBottom="8dp"
-		 app:layout_constraintStart_toStartOf="parent"
-		 app:layout_constraintEnd_toEndOf="parent"
-		 app:layout_constraintBottom_toBottomOf="parent"
-		 app:layout_constraintTop_toBottomOf="@id/welcome_text"
-		 android:text="projectactivity" />
-		 
-	<com.google.android.material.button.MaterialButton
-		android:id="@+id/launch_rpc"
-		 android:layout_height="wrap_content"
-		 android:layout_width="wrap_content"
-		 android:layout_marginBottom="4dp"
-		 app:layout_constraintStart_toStartOf="parent"
-		 app:layout_constraintEnd_toEndOf="parent"
-		 app:layout_constraintBottom_toBottomOf="parent"
-		 app:layout_constraintTop_toBottomOf="@id/launch_pa"
-		 android:text="itsrpctime" />
-		 
-	<com.google.android.material.button.MaterialButton
-		android:id="@+id/kill_rpc"
-		 android:layout_height="wrap_content"
-		 android:layout_width="wrap_content"
-		 android:layout_marginBottom="4dp"
-		 app:layout_constraintStart_toStartOf="parent"
-		 app:layout_constraintEnd_toEndOf="parent"
-		 app:layout_constraintBottom_toBottomOf="parent"
-		 app:layout_constraintTop_toBottomOf="@id/launch_rpc"
-		 android:text="no rpc?" />  
+    </RelativeLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
