--- a/app/src/main/res/layout/list_empty_layout.xml
+++ b/app/src/main/res/layout/list_empty_layout.xml
@@ -6,16 +6,20 @@
     android:layout_width="match_parent">
 
     <com.google.android.material.imageview.ShapeableImageView
-        android:layout_height="wrap_content"
-		android:layout_centerInParent="true"
-        android:layout_width="wrap_content"
+        android:layout_height="48dp"
+        android:layout_width="48dp"
+        android:layout_centerInParent="true"
+        android:src="@drawable/ic_danger_outline"
         android:id="@+id/list_empty_icon" />
 
     <com.google.android.material.textview.MaterialTextView
         android:layout_height="wrap_content"
-		android:layout_centerInParent="true"
         android:layout_width="wrap_content"
-		android:layout_below="@id/list_empty_icon"
+        android:layout_centerInParent="true"
+        android:textColor="@color/colorPrimary"
+        android:textSize="16sp"
+        android:layout_below="@id/list_empty_icon"
+        android:layout_marginTop="16dp"
         android:id="@+id/list_empty_desc" />
 
 </RelativeLayout>
