--- a/app/src/main/res/layout/list_loading_layout.xml
+++ b/app/src/main/res/layout/list_loading_layout.xml
@@ -13,9 +13,12 @@
 
     <com.google.android.material.textview.MaterialTextView
         android:layout_height="wrap_content"
-        android:layout_below="@id/list_loading_loading_bar"
         android:layout_width="wrap_content"
         android:layout_centerInParent="true"
-        android:text="@string/app_name" />
+        android:textColor="@color/colorPrimary"
+        android:textSize="16sp"
+        android:layout_below="@id/list_loading_loading_bar"
+        android:layout_marginTop="16dp"
+        android:text="@string/layout_list_bar_loading" />
 
 </RelativeLayout>
