--- a/app/src/main/res/layout/fragment_main_project.xml
+++ b/app/src/main/res/layout/fragment_main_project.xml
@@ -11,19 +11,27 @@
         android:visibility="gone"
         android:id="@+id/fragment_project_recycler_view" />
 
+    <com.google.android.material.button.MaterialButton
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:text="New Project"
+		android:layout_alignParentBottom="true"
+		android:layout_centerInParent="true"
+        android:id="@+id/fragment_project_new_project" />
+
     <include
         android:layout_height="match_parent"
         android:layout_width="match_parent"
         android:layout_centerInParent="true"
-        layout="@layout/list_loading_layout"
-        android:id="@+id/fragment_project_loading_container" />
+        android:id="@+id/fragment_project_loading_container"
+        layout="@layout/list_loading_layout" />
 
     <include
         android:layout_height="match_parent"
         android:layout_width="match_parent"
         android:layout_centerInParent="true"
         android:visibility="gone"
-        layout="@layout/list_empty_layout"
-        android:id="@+id/fragment_project_empty_container" />
+        android:id="@+id/fragment_project_empty_container"
+		layout="@layout/list_empty_layout" />
 
 </RelativeLayout>
