--- a/app/src/main/res/layout/fragment_main_project.xml
+++ b/app/src/main/res/layout/fragment_main_project.xml
@@ -5,18 +5,26 @@
     android:layout_height="match_parent"
     android:layout_width="match_parent">
 
-    <androidx.recyclerview.widget.RecyclerView
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:layout_height="match_parent"
         android:layout_width="match_parent"
-        android:visibility="gone"
-        android:id="@+id/fragment_project_recycler_view" />
+		android:id="@+id/fragment_project_refresh_layout">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_height="match_parent"
+            android:layout_width="match_parent"
+            android:visibility="gone"
+            android:id="@+id/fragment_project_recycler_view" />
+		
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
     <com.google.android.material.button.MaterialButton
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:text="New Project"
-		android:layout_alignParentBottom="true"
-		android:layout_centerInParent="true"
+        android:layout_alignParentBottom="true"
+        android:layout_centerInParent="true"
+        android:textAllCaps="false"
         android:id="@+id/fragment_project_new_project" />
 
     <include
@@ -32,6 +40,6 @@
         android:layout_centerInParent="true"
         android:visibility="gone"
         android:id="@+id/fragment_project_empty_container"
-		layout="@layout/list_empty_layout" />
+        layout="@layout/list_empty_layout" />
 
 </RelativeLayout>
