--- a/app/src/main/res/layout/mod_list_layout.xml
+++ b/app/src/main/res/layout/mod_list_layout.xml
@@ -4,20 +4,20 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
-    android:padding="8dp">
+    android:padding="@dimen/_8sdp">
 
     <com.google.android.material.imageview.ShapeableImageView
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        android:minHeight="24dp"
-        android:minWidth="24dp"
+        android:minHeight="@dimen/_24sdp"
+        android:minWidth="@dimen/_24sdp"
         android:id="@+id/mod_list_layout_preview" />
 
     <com.google.android.material.textview.MaterialTextView
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:layout_toEndOf="@id/mod_list_layout_preview"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="@dimen/_8sdp"
         android:id="@+id/mod_list_layout_name"
         android:text="Mod Name" />
 
@@ -26,9 +26,8 @@
         android:layout_width="wrap_content"
         android:layout_toEndOf="@id/mod_list_layout_preview"
         android:layout_below="@id/mod_list_layout_name"
-        android:layout_marginTop="2dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginStart="@dimen/_8sdp"
+        android:layout_marginEnd="@dimen/_16sdp"
         android:id="@+id/mod_list_layout_description"
         android:text="Mod Description" />
 
