--- a/app/src/main/res/menu/main_action_menu.xml
+++ b/app/src/main/res/menu/main_action_menu.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@+id/main_action_settings"
-		android:icon="@drawable/ic_settings"
-		android:showAsAction="always"
+        android:icon="@drawable/ic_settings"
+        app:showAsAction="always"
         android:title="Settings" />
 
 </menu>
