--- a/app/src/main/res/drawable/ic_import.xml
+++ b/app/src/main/res/drawable/ic_import.xml
@@ -4,6 +4,6 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
   <path
-      android:fillColor="?android:attr/textColorSecondary"
+      android:fillColor="?attr/colorControlNormal"
       android:pathData="M19,9h-4V3H9v6H5l7,7 7,-7zM5,18v2h14v-2H5z"/>
 </vector>
