--- a/app/src/main/res/layout/list_empty_layout.xml
+++ b/app/src/main/res/layout/list_empty_layout.xml
@@ -6,8 +6,8 @@
     android:layout_width="match_parent">
 
     <com.google.android.material.imageview.ShapeableImageView
-        android:layout_height="48dp"
-        android:layout_width="48dp"
+        android:layout_height="@dimen/_48sdp"
+        android:layout_width="@dimen/_48sdp"
         android:layout_centerInParent="true"
         android:src="@drawable/ic_danger_outline"
         android:id="@+id/list_empty_icon" />
@@ -17,9 +17,9 @@
         android:layout_width="wrap_content"
         android:layout_centerInParent="true"
         android:textColor="@color/colorPrimary"
-        android:textSize="16sp"
+        android:textSize="@dimen/_16ssp"
         android:layout_below="@id/list_empty_icon"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="@dimen/_16sdp"
         android:id="@+id/list_empty_desc" />
 
 </RelativeLayout>
