--- a/app/src/main/res/layout/project_folder_tree_view.xml
+++ b/app/src/main/res/layout/project_folder_tree_view.xml
@@ -4,6 +4,6 @@
 	 xmlns:app="http://schemas.android.com/apk/res-auto"
 	 android:layout_height="wrap_content"
 	 android:layout_width="wrap_content"
-	 android:drawablePadding="6dp"
-	 android:padding="12dp"
+	 android:drawablePadding="@dimen/_6sdp"
+	 android:padding="@dimen/_12sdp"
 	 android:id="@+id/project_treeview_folder_name" />
