--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -12,5 +12,8 @@
         <item name="android:statusBarColor">@color/colorPrimaryDefault</item>
 		
 		<item name="colorOnBackground">@color/black</item>
+		<item name="colorControlNormal">@color/white</item>
+		
+		<item name="android:navigationBarColor">@color/colorPrimary</item>
     </style>
 </resources>
