--- a/app/src/main/res/layout/list_loading_layout.xml
+++ b/app/src/main/res/layout/list_loading_layout.xml
@@ -15,8 +15,7 @@
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:layout_centerInParent="true"
-        android:textColor="@color/colorPrimary"
-        android:textSize="@dimen/_13ssp"
+        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
         android:layout_below="@id/list_loading_loading_bar"
         android:layout_marginTop="@dimen/_12sdp"
         android:text="@string/layout_list_bar_loading" />
