--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,8 +9,6 @@
         android:layout_height="?attr/actionBarSize"
         android:layout_width="match_parent"
         android:background="@color/colorPrimary"
-        android:elevation="2dp"
-        android:outlineProvider="none"
         android:layout_alignParentTop="true"
         android:id="@+id/main_toolbar" />
 
@@ -19,7 +17,9 @@
         android:layout_width="match_parent"
         android:layout_below="@id/main_toolbar"
         android:layout_above="@id/main_bottom_nav"
-        android:id="@+id/main_fragment_container" />
+        android:id="@+id/main_fragment_container">
+
+    </FrameLayout>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:layout_height="wrap_content"
@@ -27,10 +27,17 @@
         app:itemTextColor="@drawable/bottom_nav_text_color"
         android:background="@color/colorPrimary"
         app:menu="@menu/main_bottom_menu"
-        app:itemIconTint="@drawable/bottom_nav_icon_tint"
-        android:elevation="1dp"
-        android:outlineProvider="none"
         android:layout_alignParentBottom="true"
+        app:itemIconTint="@drawable/bottom_nav_icon_tint"
         android:id="@+id/main_bottom_nav" />
+
+    <LinearLayout
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+		android:layout_above="@id/main_bottom_nav"
+		android:layout_centerHorizontal="true"
+		android:layout_marginBottom="@dimen/_4sdp"
+        android:gravity="center|center_horizontal|center_vertical"
+        android:id="@+id/main_fragment_button_container" />
 
 </RelativeLayout>
