--- a/app/src/main/res/layout/activity_project.xml
+++ b/app/src/main/res/layout/activity_project.xml
@@ -16,23 +16,19 @@
              android:layout_height="?attr/actionBarSize"
              android:layout_width="match_parent"
              android:background="@color/colorPrimary"
-             android:elevation="2dp"
-             android:outlineProvider="none"
              android:id="@+id/project_toolbar" />
 
         <RelativeLayout
              android:layout_height="match_parent"
              android:layout_width="match_parent"
              android:layout_below="@id/project_toolbar"
-             android:elevation="1dp"
-             android:outlineProvider="none"
              android:id="@+id/project_no_editor_container">
 
             <TextView
                  android:layout_height="wrap_content"
                  android:layout_width="wrap_content"
                  android:layout_centerInParent="true"
-                 android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
+                 android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                  android:id="@+id/project_no_editor_title"
                  android:text="@string/app_name" />
 
@@ -42,8 +38,7 @@
                  android:layout_centerInParent="true"
                  android:layout_below="@id/project_no_editor_title"
                  android:gravity="center"
-                 android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
-                 android:textSize="@dimen/_11ssp"
+                 android:textAppearance="@style/TextAppearance.Material3.BodySmall"
                  android:layout_marginTop="@dimen/_4sdp"
                  android:text="Open some files on the file drawer (swipe right to left)" />
 
@@ -52,7 +47,6 @@
         <com.google.android.material.tabs.TabLayout
              android:layout_height="wrap_content"
              android:layout_width="match_parent"
-             android:elevation="1dp"
              app:tabIndicatorColor="@color/colorSecondary"
              app:tabTextColor="@color/white"
              android:layout_below="@id/project_toolbar"
@@ -61,29 +55,23 @@
              app:tabGravity="start"
              style="@style/App.TabLayoutTheme"
              app:tabTextAppearance="@style/App.TabLayoutTheme.Title"
-             android:outlineProvider="none"
              android:id="@+id/project_editors_tab" />
 
         <androidx.viewpager2.widget.ViewPager2
              android:layout_height="match_parent"
              android:layout_width="match_parent"
              android:layout_below="@id/project_editors_tab"
-             android:elevation="1dp"
              android:layout_above="@id/project_symbol_input_container"
-             android:outlineProvider="none"
              android:id="@+id/project_editor_view" />
 
         <HorizontalScrollView
-             android:layout_height="@dimen/_56sdp"
+             android:layout_height="wrap_content"
              android:layout_width="match_parent"
-             android:elevation="0dp"
-             android:orientation="vertical"
-             android:outlineProvider="none"
              android:layout_alignParentBottom="true"
              android:id="@+id/project_symbol_input_container">
 
             <io.github.rosemoe.sora.widget.SymbolInputView
-                 android:layout_height="match_parent"
+                 android:layout_height="wrap_content"
                  android:layout_width="wrap_content"
                  android:id="@+id/project_symbol_input" />
 
