--- a/app/src/main/res/layout/mod_list_layout.xml
+++ b/app/src/main/res/layout/mod_list_layout.xml
@@ -4,6 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
+	android:maxHeight="@dimen/_256sdp"
     android:padding="@dimen/_8sdp">
 
     <com.google.android.material.imageview.ShapeableImageView
@@ -17,6 +18,7 @@
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:layout_toEndOf="@id/mod_list_layout_preview"
+        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
         android:layout_marginStart="@dimen/_8sdp"
         android:id="@+id/mod_list_layout_name"
         android:text="Mod Name" />
@@ -25,25 +27,31 @@
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:layout_toEndOf="@id/mod_list_layout_preview"
+        android:layout_toStartOf="@id/mod_list_layout_version"
         android:layout_below="@id/mod_list_layout_name"
+        android:layout_marginEnd="@dimen/_4sdp"
+        android:textAppearance="@style/TextAppearance.Material3.BodySmall"
+        android:layout_marginTop="@dimen/_2sdp"
         android:layout_marginStart="@dimen/_8sdp"
-        android:layout_marginEnd="@dimen/_16sdp"
         android:id="@+id/mod_list_layout_description"
         android:text="Mod Description" />
 
     <com.google.android.material.textview.MaterialTextView
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
+        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
         android:layout_alignParentEnd="true"
-        android:id="@+id/mod_list_layout_version"
-        android:text="0.0.0" />
+        android:id="@+id/mod_list_layout_author"
+        android:text="ThatMG393" />
 
     <com.google.android.material.textview.MaterialTextView
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        android:layout_below="@+id/mod_list_layout_version"
+        android:layout_below="@+id/mod_list_layout_author"
+        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
         android:layout_alignParentEnd="true"
-        android:id="@+id/mod_list_layout_author"
-        android:text="ThatMG393" />
+        android:layout_marginTop="@dimen/_2sdp"
+        android:id="@+id/mod_list_layout_version"
+        android:text="0.0.0" />
 
 </RelativeLayout>
